# huawei_antenna_modeling

./: .CMakeLists.txt.swp  CMakeLists.txt
mac_build/: AntennaBuilder_automoc.cpp  CMakeCache.txt  cmake_install.cmake  moc_ItemSpace.cpp  moc_MidSpace.cpp  moc_Nansy.cpp  moc_NansyMenu.cpp
mac_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  AntennaBuilder_automoc_cmakeRulesBuildPhase.makeDebug  AntennaBuilder_automoc_cmakeRulesBuildPhase.makeMinSizeRel  AntennaBuilder_automoc_cmakeRulesBuildPhase.makeRelWithDebInfo  AntennaBuilder_automoc_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
mac_build/Debug/: AntennaBuilder
mac_build/HuaweiAntennaModeling.xcodeproj/: project.pbxproj
src/: .main.cpp.swp  AnduGLWidget.cpp  AnduGLWidget.h  SandboxGLWidget.cpp  readme.txt
src/Curve/: complex_curve.h  vectorizer.h
src/MocapIO/: BVHReader.cpp  BVHReader.h  BVHWriter.cpp  BVHWriter.h  DataRW.cpp  DataRW.h  MotionClip.cpp  MotionClip.h  MotionJoint.cpp  MotionJoint.h  MotionKeyframeSeries.cpp  MotionKeyframeSeries.h  SerialTextDataReader.cpp  SerialTextDataReader.h
src/NansyLib/: ActLine.cpp  ActLine.h  ActLinePair.cpp  ActLinePair.h  ActPolygon.cpp  ActPolygon.h  ItemSpace.cpp  ItemSpace.h  MidSpace.cpp  MidSpace.h  Nansy.cpp  Nansy.h  NansyMath.cpp  NansyMath.h  NansyMenu.cpp  NansyMenu.h  ObjReader.h  PlaneEquation.cpp  PlaneEquation.h  SandboxGLWidget.cpp  SandboxGLWidget.h  WindowDot.cpp  WindowDot.h  WindowLine.cpp  WindowLine.h  WindowPolygon.cpp  WindowPolygon.h  WorldDot.cpp  WorldDot.h  WorldPolygon.cpp  WorldPolygon.h
src/QuasarMath/: ComputeVector.cpp  ComputeVector.h  Line.cpp  Line.h  Mathematics.cpp  Mathematics.h  Matrix3.h  Matrix4.h  MatrixTool.cpp  MatrixTool.h  Plane.h  Quaternion.h  Vector2.h  Vector2Cmp.cpp  Vector2Cmp.h  Vector3.h  Vector3Cmp.h
src/Skinning/: BaseLine.cpp  BaseLine.h  ComputeMesh.cpp  ComputeMesh.h  EditableSubMesh.cpp  EditableSubMesh.h  Element.cpp  Element.h  Mesh.cpp  Mesh.h  MeshSerializer.cpp  MeshSerializer.h  MeshToolbox.cpp  MeshToolbox.h  MeshVertexData.cpp  MeshVertexData.h  ModellingParam.h  Skeleton.cpp  Skeleton.h  SubMesh.cpp  (+6 more)
ui/: SandboxGLWidget.cpp  antennaglwidget.cpp  antennaglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
win32_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AntennaBuilder.vcxproj  AntennaBuilder.vcxproj.filters  AntennaBuilder_automoc.cpp  CMakeCache.txt  HuaweiAntennaModeling.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  moc_SandboxGLWidget.cpp  moc_antennaglwidget.cpp  moc_mainwindow.cpp  test.mtl  tmp.mtl  ui_mainwindow.h  电饭锅.hwtx
(+75 files in other folders)
